--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Zoo-React-Starterify</title>
+    <title>Chicago Wildlife Watch Map Explorer</title>
     <meta name="description" content="zoo react boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
