--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Chicago Wildlife Watch Map Explorer</title>
-    <meta name="description" content="zoo react boilerplate">
+    <meta name="description" content="A geographical data visualisation tool for the Chicago Wildlife Watch project.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="main.min.css" rel="stylesheet"></head>
